syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "BattleShip.API.Protos";

message Empty {}

message Profile {
  google.protobuf.StringValue username = 1;
  google.protobuf.StringValue picture = 2;
}

message QueueSettings {
  google.protobuf.StringValue type = 1;
}

service BattleshipService {
  rpc GetProfile(Empty) returns (Profile);
  rpc JoinQueue(QueueSettings) returns (Empty);
  rpc LeaveQueue(Empty) returns (Empty);
}